# veryverysecure

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20260422000001_init.sql
crates/db/src/: error.rs  lib.rs  permissions.rs  pool.rs  projects.rs  test_support.rs  types.rs  users.rs
crates/server/: Cargo.toml
