[package]
name = "vvs-admin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
crypto = { version = "0.1.0", path = "../crypto" }
db = { version = "0.1.0", path = "../db" }
rpassword = "7.4.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
