[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
thiserror = "2.0.18"
unicode-normalization = "0.1.25"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["rt", "macros"] }
