[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
crypto = { version = "0.1.0", path = "../crypto" }
db = { version = "0.1.0", path = "../db" }
rustls-pemfile = "2.2.0"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
